# web/Apis.go
@@ -17,13 +17,21 @@ var WEBSOCKET_CONF = websocket.Config{
 
 func ApiRoutes(app *fiber.App, apis *apis.ApisHandler) {
 	api := app.Group("/api")
+
+	// Auth
 	api.Post("/register", middlewares.ContentJSON, apis.AuthRegister)
 	api.Post("/login", middlewares.ContentJSON, apis.AuthLogin)
 	api.Get("/oauth/google", apis.OAuthGoogle)
-	api.Get("/room", middlewares.AuthJWT, middlewares.Websocket, websocket.New(apis.UserChatRoom, WEBSOCKET_CONF))
+	api.Post("logout", apis.AuthLogout)
+
+	// Users Specific Data
 	api.Put("/user-update-profile", middlewares.AuthJWT, middlewares.ContentJSON, apis.UpdateProfile)
 	api.Put("/user-update-avatar", middlewares.AuthJWT, middlewares.ContentMultipartForm, apis.UpdateAvatar)
 	api.Post("/user-lists", middlewares.AuthJWT, middlewares.ContentJSON, apis.UserLists)
 
+	// Chat Rooms
+	api.Get("/room-general", middlewares.AuthJWT, middlewares.Websocket, websocket.New(apis.ChatRoomGeneral, WEBSOCKET_CONF))
+
+	// Debug
 	api.Get("/debug", apis.Debug)
 }
